--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
     "chokidar": "^1.4.2",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
+    "cp": "^0.2.0",
+    "cpr": "^1.0.0",
     "ip": "^1.1.0",
     "koa": "^1.1.2",
     "koa-sendfile": "^1.1.1",
     "koa-static": "^2.0.0",
+    "script-runner": "^0.1.4",
     "vue-hot-reload-api": "^1.3.2",
     "vue-router": "^0.7.10",
     "vueify-insert-css": "^1.0.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4",
-    "webpack-koa-dev-middleware": "^0.1.3",
-    "script-runner": "^0.1.4"
+    "webpack-koa-dev-middleware": "^0.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
@@ -67,6 +69,7 @@
     "build": "coffee --no-header --compile --output lib/ src/*.coffee",
     "watch": "coffee --no-header --compile --watch --output lib/ src/*.coffee",
     "dev": "echo dev && ./index.js --folder test/dev/",
+    "static": "./index.js --folder test/dev/ --static static/",
     "test": "run-npm --parallel dev --master \"run-npm 'sleep 1' test:*\"",
     "test:compile": "coffee --compile --output test/ test/*.coffee",
     "test:casperjs": "casperjs --verbose test test/index.js",
