--- a/package.json
+++ b/package.json
@@ -31,17 +31,16 @@
     "koa-static": "^2.0.0",
     "script-runner": "^0.1.4",
     "vue-hot-reload-api": "^1.3.2",
-    "vue-router": "^0.7.10",
+    "vue-router": "^0.7.11",
     "vueify-insert-css": "^1.0.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.6.4",
-    "webpack-koa-dev-middleware": "^0.1.3"
+    "webpack-hot-middleware": "^2.7.1"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
+    "babel-core": "^6.5.2",
     "babel-loader": "^6.2.2",
-    "babel-plugin-transform-runtime": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-runtime": "^5.8.35",
     "casperjs": "^1.1.0-beta5",
@@ -49,7 +48,7 @@
     "css-loader": "^0.23.1",
     "jade": "^1.11.0",
     "phantomjs-prebuilt": "^2.1.4",
-    "rimraf": "^2.4.4",
+    "rimraf": "^2.5.2",
     "script-runner": "^0.1.0",
     "template-html-loader": "0.0.3",
     "vue": "^1.0.16",
