--- a/package.json
+++ b/package.json
@@ -20,40 +20,40 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "chokidar": "^1.4.2",
-    "coffee-script": "^1.10.0",
+    "chokidar": "^1.6.0",
+    "coffee-script": "^1.11.0",
     "commander": "^2.9.0",
     "cp": "^0.2.0",
-    "cpr": "^1.0.0",
-    "ip": "^1.1.0",
-    "koa": "^1.1.2",
-    "koa-sendfile": "^1.1.1",
+    "cpr": "^2.0.0",
+    "ip": "^1.1.3",
+    "koa": "^1.2.4",
+    "koa-sendfile": "^2.0.0",
     "koa-static": "^2.0.0",
-    "script-runner": "^0.1.4",
+    "script-runner": "^0.1.5",
     "vue-hot-reload-api": "^1.3.2",
-    "vue-router": "^0.7.11",
+    "vue-router": "^0.7.13",
     "vueify-insert-css": "^1.0.0",
-    "webpack": "^1.12.13",
-    "webpack-dev-middleware": "^1.5.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.5.3",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.2",
-    "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-runtime": "^5.8.35",
-    "casperjs": "^1.1.0-beta5",
+    "babel-core": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-runtime": "^6.11.6",
+    "casperjs": "^1.1.3",
     "coffee-loader": "^0.7.2",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "jade": "^1.11.0",
-    "phantomjs-prebuilt": "^2.1.4",
-    "rimraf": "^2.5.2",
+    "phantomjs-prebuilt": "^2.1.12",
+    "rimraf": "^2.5.4",
     "script-runner": "^0.1.0",
     "template-html-loader": "0.0.3",
-    "vue": "^1.0.16",
-    "vue-html-loader": "^1.2.0",
-    "vue-loader": "^8.1.3",
+    "vue": "^1.0.28",
+    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0"
   },
   "keywords": [
