--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "chokidar": "^1.6.0",
-    "coffee-script": "^1.11.0",
+    "coffee-script": "^1.11.1",
     "commander": "^2.9.0",
     "cp": "^0.2.0",
     "cpr": "^2.0.0",
@@ -30,30 +30,24 @@
     "koa-sendfile": "^2.0.0",
     "koa-static": "^2.0.0",
     "script-runner": "^0.1.5",
-    "vue-hot-reload-api": "^1.3.2",
-    "vue-router": "^0.7.13",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-router": "^2.0.0",
     "vueify-insert-css": "^1.0.0",
     "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.5.3",
+    "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
-    "babel-core": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-runtime": "^6.11.6",
     "casperjs": "^1.1.3",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.25.0",
-    "jade": "^1.11.0",
-    "phantomjs-prebuilt": "^2.1.12",
+    "phantomjs-prebuilt": "^2.1.13",
     "rimraf": "^2.5.4",
-    "script-runner": "^0.1.0",
-    "template-html-loader": "0.0.3",
-    "vue": "^1.0.28",
+    "script-runner": "^0.1.5",
+    "vue": "^2.0.1",
+    "vue-compiler": "^2.0.0",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^8.5.3",
+    "vue-loader": "^9.5.1",
     "vue-style-loader": "^1.0.0"
   },
   "keywords": [
@@ -65,9 +59,14 @@
   "scripts": {
     "clean": "rimraf lib/ && mkdir lib",
     "prebuild": "npm run clean",
-    "build": "coffee --no-header --compile --output lib/ src/*.coffee",
-    "watch": "coffee --no-header --compile --watch --output lib/ src/*.coffee",
-    "dev": "echo dev && ./index.js --folder test/dev/",
+    "build": "run-npm --parallel build:*",
+    "build:pug": "pug --out app/ app/index.pug",
+    "build:coffee": "coffee --no-header --compile --output lib/ src/*.coffee",
+    "build:vue": "vue-compiler --out app/ app/main.vue",
+    "watch": "run-npm --parallel watch:*",
+    "watch:pug": "pug --watch ---out app/ app/index.pug",
+    "watch:coffee": "coffee --no-header --compile --watch --output lib/ src/*.coffee",
+    "dev": "run-npm --parallel watch './index.js --folder test/dev/'",
     "static": "./index.js --folder test/dev/ --static static/",
     "test": "run-npm --parallel dev --master \"run-npm 'sleep 1' test:*\"",
     "test:compile": "coffee --compile --output test/ test/*.coffee",
