--- a/package.json
+++ b/package.json
@@ -27,15 +27,14 @@
     "cpr": "^2.0.0",
     "ip": "^1.1.3",
     "koa": "^1.2.4",
+    "koa-hot-dev-webpack": "^0.1.1",
     "koa-sendfile": "^2.0.0",
     "koa-static": "^2.0.0",
     "script-runner": "^0.1.5",
     "vue-hot-reload-api": "^2.0.6",
     "vue-router": "^2.0.0",
     "vueify-insert-css": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "casperjs": "^1.1.3",
