--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "phantomjs-prebuilt": "^2.1.12",
     "rimraf": "^2.5.4",
     "script-runner": "^0.1.0",
+    "stylus": "^0.54.5",
     "template-html-loader": "0.0.3",
     "vue": "^1.0.28",
     "vue-html-loader": "^1.2.3",
