--- a/package.json
+++ b/package.json
@@ -27,32 +27,28 @@
     "cpr": "^2.0.0",
     "ip": "^1.1.3",
     "koa": "^1.2.4",
+    "koa-hot-dev-webpack": "^0.1.1",
     "koa-sendfile": "^2.0.0",
     "koa-static": "^2.0.0",
     "script-runner": "^0.1.5",
     "vue-hot-reload-api": "^1.3.2",
     "vue-router": "^0.7.13",
     "vueify-insert-css": "^1.0.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.5.3",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-core": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-runtime": "^6.11.6",
     "casperjs": "^1.1.3",
     "coffee-loader": "^0.7.2",
     "css-loader": "^0.25.0",
-    "jade": "^1.11.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "pug": "^2.0.0-beta6",
+    "pug-cli": "^1.0.0-alpha6",
     "rimraf": "^2.5.4",
-    "script-runner": "^0.1.0",
+    "script-runner": "^0.1.5",
     "stylus": "^0.54.5",
     "template-html-loader": "0.0.3",
     "vue": "^1.0.28",
+    "vue-compiler": "^1.0.0",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0"
@@ -66,7 +62,10 @@
   "scripts": {
     "clean": "rimraf lib/ && mkdir lib",
     "prebuild": "npm run clean",
-    "build": "coffee --no-header --compile --output lib/ src/*.coffee",
+    "build": "run-npm --parallel build:*",
+    "build:pug": "pug --out app/ app/index.pug",
+    "build:coffee": "coffee --no-header --compile --output lib/ src/*.coffee",
+    "build:vue": "NODE_ENV=production vue-compiler --out app/ app/main.vue",
     "watch": "coffee --no-header --compile --watch --output lib/ src/*.coffee",
     "dev": "echo dev && ./index.js --folder test/dev/",
     "static": "./index.js --folder test/dev/ --static static/",
